src/test/ui/async-await/issue-73541-3.rs
fn main() {
    'aaaaab: loop {
        || {
            loop { continue 'aaaaaa }
            //~^ ERROR use of undeclared label `'aaaaaa`
        };

    }
}
